--- a/trunk/mts/src/main/conf/udp.properties
+++ b/trunk/mts/src/main/conf/udp.properties
@@ -32,10 +32,60 @@ MESSAGE_TIME_LIFE = 5
 # [float]
 operations.RECEIVE_TIMEOUT = 5
 
+
+#######################################################
+# socket parameters
+#######################################################
+
+# Socket flag SO_RCVBUF
+# ets the SO_RCVBUF option to the specified value for this Socket. 
+# The SO_RCVBUF option is used by the platform's networking code as a hint 
+# for the size to set the underlying network I/O buffers.
+# [integer] 
+socket.RECEIVE_BUFFER = 8192
+
+# Enable/disable the SO_REUSEADDR socket option. 
+# When a TCP connection is closed the connection may remain in a timeout state 
+# for a period of time after the connection is closed (typically known as the 
+# TIME_WAIT state or 2MSL wait state). For applications using a well known socket 
+# address or port it may not be possible to bind a socket to the required 
+# SocketAddress if there is a connection in the timeout state involving the 
+# socket address or port.
+# [boolean] 
+socket.REUSE_ADDRESS = false
+
+# Sets the SO_SNDBUF option to the specified value for this Socket. The SO_SNDBUF 
+# option is used by the platform's networking code as a hint for the size to set 
+# the underlying network I/O buffers.
+# [integer] 
+socket.SEND_BUFFER = 8192
+
+# Enable/disable SO_TIMEOUT with the specified timeout, in milliseconds. 
+# With this option set to a non-zero timeout, a read() call on the InputStream 
+# associated with this Socket will block for only this amount of time.
+# The option must be enabled prior to entering the blocking operation to have 
+# effect. The timeout must be > 0. A timeout of zero is interpreted as an 
+# infinite timeout.
+# [integer] 
+socket.TIMEOUT = 0
+
+# Sets traffic class or type-of-service octet in the IP header for packets sent 
+# from this Socket. As the underlying network implementation may ignore this 
+# value applications should consider it a hint. 
+# The tc must be in the range 0 <= tc <= 255.
+# for Internet Protocol v4 the value consists of an octet with precedence and 
+# TOS fields as detailed in RFC 1349.
+# [integer] 
+socket.TRAFFIC_CLASS = 0
+
+
+#######################################################
+
 # Flag to set the use of Non-blocking I/O
 # Enabling this allows having more opened listenpoints
 # [boolean]
 USE_NIO = false
+
 
 #######################################################
 ## Route
