--- a/trunk/mts/src/main/conf/tester.properties
+++ b/trunk/mts/src/main/conf/tester.properties
@@ -212,9 +212,22 @@ operations.SEMAPHORE_TIMEOUT = 30
 # [float]
 operations.RECEIVE_TIMEOUT = 30
 
-# setFromCsv operation: separator used between two fields
+# Comment character for the file.readCsv <paramter> operation
+# if this character is present at the begining of the line, then 
+# this entire line is ignored
 # [char]
-operations.CSV_SEPARATOR = ;
+operations.CSV_COMMENT_CHAR = #
+
+# Separator character for the file.readCsv <paramter> operation
+# this character is used to separate every column on each line
+# [char]
+operations.CSV_SEPARATOR_CHAR = ;  
+
+# Escape character for the file.readCsv <paramter> operation
+# if this separator character is found enclosed between this character then 
+# this separator is not taken into account
+# [char]
+operations.CSV_ESCAPE_CHAR = "
 
 
 ###############################################################################
