--- a/trunk/mts/src/main/tutorial/rtpflow/load/async_call_sip_rtp/tester.properties
+++ b/trunk/mts/src/main/tutorial/rtpflow/load/async_call_sip_rtp/tester.properties
@@ -5,7 +5,7 @@
 # 2 = INFO
 # 3 = DEBUG
 # [enumeration] ERROR|WARN|INFO|DEBUG 
-logs.MAXIMUM_LEVEL = DEBUG
+logs.MAXIMUM_LEVEL = WARN
 
 # Storage location for logs
 # Indicate whether we write logs and where we store it
@@ -13,23 +13,9 @@ logs.MAXIMUM_LEVEL = DEBUG
 # 1 = FILE : logs in files
 # 2 = MEMORY : logs in memory (for GUI only)
 # [enumeration] DISABLE|FILE|MEMORY 
-logs.STORAGE_LOCATION = MEMORY
+logs.STORAGE_LOCATION = FILE
 
 # Flag whether we generate charts pictures in stats reports
 # [boolean] 
-stats.GENERATE_CHARTS_PICTURES = true
-
-# Path to your HTML browser editor to display the statistic report.
-# This is the path of the binary file of your HTML browser.
-# (file path)
-# [string]
-# stats.BROWSER_PATH = "C:\\Program\ Files\\Internet\ Explorer\\iexplore.exe"
-# [string] 
-stats.BROWSER_PATH = /usr/bin/firefox
-
-# Path to your preferred editor to edit scenarios and test scripts into the GUI.
-# This is the path of the binary file of your editor.
-# (file path)
-# [string] 
-gui.EDITOR_PATH = /usr/bin/gedit
+stats.GENERATE_CHARTS_PICTURES = false
 
