--- a/mts/src/main/tutorial/rtpflow/load/async_call_sip_rtp/sip.properties
+++ b/mts/src/main/tutorial/rtpflow/load/async_call_sip_rtp/sip.properties
@@ -4,7 +4,7 @@ listenpoint.LOCAL_HOST =
 
 # Default listen port; empty or zero value means no listen port
 # [integer] 
-listenpoint.LOCAL_PORT = 
+listenpoint.LOCAL_PORT = 7070
 
 # Flag to listen to UDP transport
 # [boolean] 
@@ -37,7 +37,7 @@ MESSAGE_TIME_LIFE = 35
 
 # Time (in seconds) of life the session objects
 # [float] 
-SESSION_TIME_LIFE = 400
+SESSION_TIME_LIFE = 1
 
 # Timeout duration (in seconds) for the receive operations
 # [float] 
