--- a/trunk/mts/src/main/conf/sctp.properties
+++ b/trunk/mts/src/main/conf/sctp.properties
@@ -34,25 +34,29 @@ operations.RECEIVE_TIMEOUT = 10
 
 
 #######################################################
-# specific parameters
+# connect specific parameters
 #######################################################
 
 # Maximum output stream
 # [integer]
-server.NUM_OSTREAMS = 10
+connect.NUM_OSTREAMS = 10
 
 # Maximum input stream
 # [integer]
-server.MAX_INSTREAMS = 10
+connect.MAX_INSTREAMS = 10
 
 # Maximum attempts
 # [integer]
-server.MAX_ATTEMPS = 20
+connect.MAX_ATTEMPS = 20
 
 # Maximum init time
 # [integer]
-server.MAX_INIT_TIMEO =20
+connect.MAX_INIT_TIMEO =20
 
+
+#######################################################
+# send specific parameters
+#######################################################
 
 # Default client data chunk 'stream' parameter (Stream Identifier) 
 # [integer]
