--- a/mts/src/main/conf/gtpp.properties
+++ b/mts/src/main/conf/gtpp.properties
@@ -82,7 +82,7 @@ route.TRANSACTION_ID = channel.remoteHost,channel.remotePort,header.sequenceNumb
 # course dependant
 # type list<string> (list of path keywords)
 # [string]
-route.MESSAGE_ID = header.sequenceNumber,header.type
+route.MESSAGE_ID = header.sequenceNumber,header.messageType
 
 # The tool routes a received request to the scenario given by its name. In this case, the tool is 
 # simulating a pure server.
