--- a/trunk/mts/src/main/conf/gtp.properties
+++ b/trunk/mts/src/main/conf/gtp.properties
@@ -25,7 +25,7 @@ listenpoint.LOCAL_PORT = 3386
 # Flag to listen to UDP transport
 # [boolean]
 # NOT SUPPORTED : please keep "false" value
-listenpoint.LISTEN_UDP = false
+listenpoint.LISTEN_UDP = true
 
 # Flag to listen to TCP transport
 # [boolean]
