--- a/trunk/mts/src/main/conf/gtp.properties
+++ b/trunk/mts/src/main/conf/gtp.properties
@@ -70,7 +70,7 @@ operations.RECEIVE_TIMEOUT = 30
 # protocol dependant
 # type list<string> (list of path keywords)
 # [string]
-route.TRANSACTION_ID = channel.remoteHost,channel.remotePort,header.sequenceNumber
+route.TRANSACTION_ID = header.sequenceNumber
 
 # The tool automatically routes a received request to the scenario given in the "destScenario" parameter 
 # of the send operation in the same testcase. In this case, the tool is simulating a client and server 
