--- a/trunk/mts/src/main/conf/gtp.properties
+++ b/trunk/mts/src/main/conf/gtp.properties
@@ -82,7 +82,7 @@ route.TRANSACTION_ID = header.sequenceNumber
 # course dependant
 # type list<string> (list of path keywords)
 # [string]
-route.MESSAGE_ID = header.sequenceNumber,header.messageType
+route.MESSAGE_ID = header.sequenceNumber,header.type
 
 # The tool routes a received request to the scenario given by its name. In this case, the tool is 
 # simulating a pure server.
