--- a/mts/pom.xml
+++ b/mts/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>myGroupId</groupId>
     <artifactId>mts</artifactId>
-    <version>5.6.1_BETA</version>
+    <version>5.7.0</version>
     <packaging>jar</packaging>
 
     <name>mts</name>
