--- a/trunk/mts/src/main/conf/tester.properties
+++ b/trunk/mts/src/main/conf/tester.properties
@@ -18,7 +18,7 @@
 # the runner and stops
 # 0 means infinite duration.
 # [float]
-runprofile.DURATION = 360000
+runprofile.DURATION = 3600
 
 # Number of times testcases of this test will be run.
 # When the testacse has been run this number, then the testcase is not 
@@ -153,8 +153,8 @@ stats.REPORT_DIRECTORY = ../reports/
 # This is the path of the binary file of your HTML browser.
 # (file path)
 # [string]
-#stats.BROWSER_PATH = "$BROWSER_PATH"
-stats.BROWSER_PATH = "C:\Program Files\Internet Explorer\iexplore.exe"
+stats.BROWSER_PATH = "$BROWSER_PATH"
+# stats.BROWSER_PATH = "C:\Program Files\Internet Explorer\iexplore.exe"
 
 # Number of points for the graph array : to specify the accurate of graph and csv files.
 # A too large value can increase the time to generate the statistic HTML report.
@@ -274,5 +274,5 @@ protocol.STACK_CLASS_NAME_RTP = com.devoteam.srit.xmlloader.rtp.StackRtp
 # This is the path of the binary file of your editor.
 # (file path)
 # [string]
-# gui.EDITOR_PATH = "$EDITOR_PATH"
-gui.EDITOR_PATH = "C:\Program Files\PSPad editor\PSPad.exe"
+gui.EDITOR_PATH = "$EDITOR_PATH"
+# gui.EDITOR_PATH = "C:\Program Files\PSPad editor\PSPad.exe"
