--- a/trunk/mts/src/main/tutorial/diameter/diameter.properties
+++ b/trunk/mts/src/main/tutorial/diameter/diameter.properties
@@ -7,3 +7,12 @@
 # [string] 
 route.SCENARIO_NAME = listenpoint.name|message.protocol|header.command
 
+
+#######################################################
+# Dictionary
+
+# This parameter defines the path (relative or absolute) for diameter
+# dictionary.
+# (file path)
+# [string]
+dictionary.PATH = ../tutorial/diameter/dictionary/dictionary.xml
